[GGC-232] fix icons too close to text in German
this still needs a more flexible solution, made difficult by the fact that the icons need to align with the top of the text

--- a/src/containers/whatIsGingr/WhatIsGingr.css
+++ b/src/containers/whatIsGingr/WhatIsGingr.css
@@ -146,7 +146,7 @@
 
 .l2c__content.l2c__content--agency-establishment .l2c__content-title img {
   top: -50px;
-  right: -110px;
+  right: -90px;
   position: relative;
 }
 
